# kneeboard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  web.yml
cmd/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml  fuzz_planner.sh
core/fuzz/fuzz_targets/: fuzz_planner.rs
core/src/: calc.rs  definition.rs  diversion.rs  draw_utils.rs  hold.rs  lib.rs  planner.rs  route.rs  vector.rs
definition/: Cargo.toml
definition/src/: lib.rs
pdf/: Cargo.toml
pdf/src/: lib.rs
web/: Cargo.toml  index.html
web/src/: application.rs  common.rs  detail.rs  diversion.rs  hold.rs  icons.rs  important.rs  leg.rs  lib.rs  main.rs  messages.rs  note.rs  route.rs  validation.rs  workspace.rs  workspace_storage.rs
