[package]
name = "cmd"
version = "0.1.0"
authors = ["Kneeboard Notes <kneeboardnotes@outlook.com>"]
edition = "2021"

[[bin]]
name = "kneeboard"

[dependencies]
core = { path = "../core" }
common = { path = "../common" }
definition = { path = "../definition" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap =  { version = "4.2.7", features = ["derive"] }