[package]
name = "common"
version = "0.1.0"
authors = ["Kneeboard Notes <kneeboardnotes@outlook.com>"]
edition = "2021"

[dependencies]
core = { path = "../core" }
definition = { path = "../definition" }
serde_json = "1.0"
serde_yaml = "0.9.25"
serde = { version = "1.0", features = ["derive"] }