[package]
name = "web"
version = "0.1.0"
authors = ["Kneeboard Notes <kneeboardnotes@outlook.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
definition = { path = "../definition" }
yew = { version = "0.20.0", features = ["csr"] }
core = { path = "../core" }
js-sys = "0.3.63"
gloo = "0.9.0"
serde_json = "1.0"
serde_yaml = "0.9.25"
gloo-console = "0.2.3"
base64 = "0.21.2"

[dependencies.web-sys]
version = "0.3"
features = ["File"]

[profile.release]
opt-level = 'z'
strip = "debuginfo"
overflow-checks = true
lto = "fat"
codegen-units = 1