[package]
name = "web"
version = "0.1.0"
authors = ["Kneeboard Notes <kneeboardnotes@outlook.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
definition = { path = "../definition" }
yew = { version = "0.21", features = ["csr"] }
core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
gloo = { version = "0.11", features = ["storage"] }
serde_json = "1.0"
gloo-console = "0.3"
base64 = "0.22"
wasm-bindgen = "0.2.95"

[dependencies.web-sys]
version = "0.3"
features = ["File"]

[profile.release]
opt-level = 'z'
strip = "debuginfo"
overflow-checks = true
lto = "fat"
codegen-units = 1