
[package]
name = "core-fuzz"
version = "0.1.0"
authors = ["Kneeboard Notes <kneeboardnotes@outlook.com>"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.6"
definition = { path = "../../definition", features=["arbitrary"]}

[dependencies.core]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_planner"
path = "fuzz_targets/fuzz_planner.rs"
test = false
doc = false
